<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:paddingLeft="10dp"
   android:paddingRight="10dp"
   android:paddingTop="60dp"
	
  
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            
            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_toEndOf="@+id/gambar"
                android:background="@android:color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/luas"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:text="@string/luas"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rumus_luas"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    android:background="#fff"
                    android:text="Panjang x Lebar" />

                <TextView
                    android:id="@+id/keliling"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:text="@string/keliling"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:text="2 x (Panjang + Lebar)" />

            </TableLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/panjang"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lebar"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_hitung_luas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="hitung_luas"
                android:text="@string/hitung_luas"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_hitung_keliling"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="hitung_keliling"
                android:text="@string/hitung_keliling"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_luas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/hasil"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>